[package]
name = "dock"
description = "A port for your files."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
keywords = ["ftp", "tcp"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
cuid2 = "0.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[profile.dev]
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
lto = "thin"
debug = 0
strip = true
